--- a/prick/style.css
+++ b/prick/style.css
@@ -1,3 +1,49 @@
-#plantBox {
-    background-color: aquamarine;
+h1 {
+	font-size: 38px;
+	font-family: 'Love Ya Like A Sister', cursive;
+	color: #B7A823;
+	font-weight: 400;
+}
+
+img{
+	max-width: 250px;
+	max-height: 250px;
+}
+
+.top{
+	margin: auto;
+	width: 70%;
+	text-align: center;
+	padding: 20px;
+}
+
+.garden-box{
+	display: block;
+	margin: auto;
+	width: 100%;
+	
+}
+
+.plant-rows{
+	margin: auto;
+	width: 100%;
+	text-align: center;
+	padding: 20px;
+}
+
+input {
+	background-color: #6A2D55;
+	color: #fff;
+	border: none;
+	width: 60px;
+	padding: 10px;
+	margin: 10px;
+	font-family: sans-serif;
+}
+
+p{
+	font-family: "Open Sans", sans-serif;
+	color: #6A2D55;
+	font-size: 14px;
+	font-weight: bold;
 }
