--- a/weather/style.css
+++ b/weather/style.css
@@ -1,15 +1,19 @@
-html {
-	background: url(https://images.unsplash.com/photo-1522110062882-5882267d3ea3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a1da3dd5647ca21e9f9d6fe890798b64&auto=format&fit=crop&w=400&q=80) no-repeat center center fixed; 
-	background-size: cover;
-}
-
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
-	display: flex;
 	min-height: 100vh;
 	margin: 0;
+	background-image: linear-gradient(135deg, #a7cfdf 0%,#23538a 100%);
+}
+
+.app {
+	min-height: 100vh;
+	height: 100%;
+	background-size: cover;
+	background-position: center center;
+	display: flex;
 	flex-direction: column;
+
 }
 
 table{
@@ -90,7 +94,7 @@ footer{
 a{
 	font-size: 14px;
 	color: #fff;
-	
+	text-shadow:0px 0px 10px rgba(0, 0, 0, .5);
 }
 
 header{
