--- a/weather/style.css
+++ b/weather/style.css
@@ -16,6 +16,21 @@ body {
 
 }
 
+.header-start {
+	font-weight: 300;
+	font-size: 72px;
+	color: #fff;
+}
+
+.start-container {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 70px;
+	text-align: center;
+}
+
 table{
 	width: 100%;
 }
@@ -60,6 +75,14 @@ h3{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.input-start {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	align-self: center;
+	flex-basis: 10%;
 }
 
 .location{
