--- a/pupscriptions/style.css
+++ b/pupscriptions/style.css
@@ -1,3 +1,58 @@
+body {
+	font-family: 'Muli', sans-serif;
+}
+
+.button-box{
+	display: flex;
+	flex-direction: row;
+}
+
+button {
+	text-align: left;
+	font-size: 12px;
+    background-color: #33cccc;
+    border: 0;
+    border-radius: 10px;
+    -webkit-appearance: none;
+    padding: 11px;
+    font-weight: bold;
+    color: #fff;
+    margin: 10px;
+    font-family: 'Muli', sans-serif;
+}
+
+h1 {
+	color: #33cccc;
+	font-size: 24px;
+}
+
 p {
-	color: red;
+	color: #33cccc;
+	font-size: 16px;
+	font-weight: 300;
+	
+}
+
+input {
+	border:3px solid #33cccc;
+	background-color: #EBEBEB;
+	color: #33cccc;
+	border-radius: 10px;
+	width: 150px;
+	padding: 10px;
+	margin: 10px;
+	font-weight: 400;
+	font-family: 'Muli', sans-serif;
+}
+
+input:focus { 
+	border-radius: 10px;
+    outline:none;
+    border-color:#9ecaed;
+    box-shadow:0 0 10px #9ecaed;
+}
+
+hr {
+	border: none;
+	border-top: 1px solid #33cccc;
 }
