--- a/pupscriptions/style.css
+++ b/pupscriptions/style.css
@@ -31,6 +31,7 @@ h1 {
 	color: #ff5050;
 	font-size: 28px;
 	margin-top: 25px;
+	padding: 10px;
 }
 
 h2 {
@@ -48,7 +49,7 @@ p {
 
 input.field {
 	border:3px solid #33cccc;
-	background-color: #EBEBEB;
+	background-color: #f2f2f2;
 	color: #33cccc;
 	border-radius: 10px;
 	width: 150px;
@@ -91,19 +92,82 @@ table {
 	border-spacing: 10px;
 }
 
+.top-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: nowrap;
+	align-items: center;
+	
+}
 .main-container {
 	display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right: 500px;
-    margin-left: 500px;
+    margin-right: 50px;
+    margin-left: 50px;
     margin-top: 50px;
     padding-bottom: 50px;
     border-radius: 5px;
     box-shadow: 0px 0px 15px grey;
     background: #fff;
+    min-width: 600px;
 }
+
+.side-container {
+	position: fixed;
+	top: 20px;
+	display: flex;
+    flex-direction: column;
+   /* justify-content: left;*/
+    align-items: left;
+    margin-top: 50px;
+    margin-left: 480px;
+    padding-bottom: 50px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px grey;
+    background: #ff5050;
+}
+
+.side-hr {
+	border: none;
+	border-top: 1px solid #fff;
+	width: 50%;
+}
+
+
+p.side-text {
+	color: #fff;
+	margin: 10px;
+	font-size: 15px;
+	padding: 5px;
+	font-weight: 400px;
+}
+
+p.side-text-total {
+	color: #fff;
+	margin: 10px;
+	font-size: 14px;
+	font-weight: 700;
+	padding: 5px;
+}
+
+h2.side-text {
+	font-size: 16px;
+	color: #fff;
+	margin: 10px;
+	padding: 5px;
+	text-decoration: underline;;
+}
+
+h3.side-text {
+	font-size: 18px;
+	color: #fff;
+	margin: 10px;
+	padding: 5px;
+}
+
 
 .intro-div {
 	display: flex;
