--- a/pupscriptions/style.css
+++ b/pupscriptions/style.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;*/
     min-height: 100vh;
 	margin: 0;
-    background-image: linear-gradient(135deg, #a7cfdf 0%,#33cccc 100%);
+/*  background-image: linear-gradient(135deg, #a7cfdf 0%,#33cccc 100%);*/
 }
 
 .button-box{
@@ -16,7 +16,7 @@ body {
 button {
 	text-align: left;
 	font-size: 14px;
-    background-color: #ff5050;
+    background-color: #356d87;
     border: 0;
     border-radius: 10px;
     -webkit-appearance: none;
@@ -28,14 +28,16 @@ button {
 }
 
 h1 {
-	color: #ff5050;
+	font-family: 'Zilla Slab', serif;
+	font-weight: 400;
+	color: #356d87;
 	font-size: 28px;
 	margin-top: 25px;
 	padding: 10px;
 }
 
 h2 {
-	color: #33cccc;
+	color: #356d87;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -48,9 +50,9 @@ p {
 }
 
 input.field {
-	border:3px solid #33cccc;
+	border:3px solid #c8dfea;
 	background-color: #f2f2f2;
-	color: #33cccc;
+	color: #356d87;
 	border-radius: 10px;
 	width: 150px;
 	padding: 10px;
@@ -105,14 +107,16 @@ table {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right: 50px;
-    margin-left: 50px;
+   	margin-right: 10px;
+    margin-left: 10px;
     margin-top: 50px;
+    margin-bottom: 50px;
     padding-bottom: 50px;
     border-radius: 5px;
-    box-shadow: 0px 0px 15px grey;
-    background: #fff;
+/*    box-shadow: 0px 0px 15px grey;
+*/  background: #fff;
     min-width: 600px;
+    border: solid 3px #c8dfea;
 }
 
 .side-container {
@@ -123,11 +127,11 @@ table {
    /* justify-content: left;*/
     align-items: left;
     margin-top: 50px;
-    margin-left: 480px;
+    margin-left: 420px;
     padding-bottom: 50px;
     border-radius: 5px;
-    box-shadow: 0px 0px 15px grey;
-    background: #ff5050;
+/*    box-shadow: 0px 0px 15px grey;
+*/    background: #356d87;
 }
 
 .side-hr {
@@ -148,7 +152,7 @@ p.side-text {
 p.side-text-total {
 	color: #fff;
 	margin: 10px;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 700;
 	padding: 5px;
 }
@@ -168,6 +172,21 @@ h3.side-text {
 	padding: 5px;
 }
 
+a:link.side-text{
+	color: #fff;
+	padding: 5px;
+	margin: 10px;
+	text-decoration: none;
+	
+}
+
+a:hover.side-text {
+	text-decoration: underline;
+}
+
+a:visited.side-text {
+	color: #fff;
+}
 
 .intro-div {
 	display: flex;
@@ -179,7 +198,9 @@ h3.side-text {
     margin-top: 50px;
     padding-bottom: 50px;
     border-radius: 5px;
-    box-shadow: 0px 0px 15px grey;
-    background: #fff;
+/*    box-shadow: 0px 0px 15px grey;
+*/    background: #fff;
+    border: solid 3px #c8dfea;
+    
 	
 }
