--- a/pupscriptions/style.css
+++ b/pupscriptions/style.css
@@ -78,6 +78,12 @@ hr {
 	width: 50%;
 }
 
+hr.onwhite {
+	border: none;
+	border-top: 1px solid #356d87;
+	width: 50%;
+}
+
 .day-names {
 	color: #a4a4a4;
 	font-size: 16px;
@@ -117,6 +123,7 @@ table {
 /*    box-shadow: 0px 0px 15px grey;
 */  background: #fff;
     min-width: 600px;
+    max-width: 600px;
     border: solid 3px #c8dfea;
 }
 
@@ -220,4 +227,8 @@ a:visited.side-text {
 .pill-bottle {
 	max-width: 50px;
 	padding: 10px;
+}
+
+ul { 
+	list-style: none;
 }
